--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Full Page Quiz Pro</title>
+    <title>Quiz Master Pro</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 </head>
@@ -39,7 +39,7 @@
 
         <div id="gridOverlay" class="overlay hidden">
             <div class="overlay-content">
-                <h3>Navigation</h3>
+                <h3>Select Question</h3>
                 <table class="grid-table" id="gridTable"></table>
                 <button class="btn-close" onclick="toggleGrid()">Close</button>
             </div>
