--- a/Nav.html
+++ b/Nav.html
@@ -53,8 +53,8 @@
                     <h2>MOCK EXAM</h2>
                 </div>
                 <div class="dynamic-button-grid">
-                    <button onclick="openExam('mock1.pdf', 'ans1.pdf')">Mock A</button>
-                    <button onclick="openExam('mock2.pdf', 'ans2.pdf')">Mock B</button>
+                    <button onclick="openExam('MOCK1A', 'MOCK1Q')">Mock A</button>
+                    <button onclick="openExam('MOCK2A', 'MOCK2Q')">Mock B</button>
                 </div>
             </section>
         </div>
