--- a/Nav.html
+++ b/Nav.html
@@ -12,7 +12,7 @@
     
     <header class="main-header">
         <h1>ExamPOG `${Subject}`</h1>
-        <p>AC Problems from Academic MDCU</p>
+        <p>Web by CaT, AC Problems from Academic MDCU</p>
     </header>
 
     <main class="portal-container">
@@ -69,5 +69,4 @@
 
     <script src="Nav.js"></script>
 </body>
-
 </html>
