--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <div class="mesh-bg"></div>
     
     <header class="main-header">
-        <h1>ExamPOG</h1>
-        <p>AC Problems from Academic MDCU</p>
+        <h1>CaT's ExamPOG</h1>
+        <p>Web by CaT, AC Problems from Academic MDCU</p>
     </header>
 
     <main class="portal-container">
