--- a/Nav.html
+++ b/Nav.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="Nav.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZ2SGLTEJP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZ2SGLTEJP');
+</script>
 <body>
     <div class="mesh-bg"></div>
     
