--- a/display.html
+++ b/display.html
@@ -8,15 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZ2SGLTEJP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-LZ2SGLTEJP');
-</script>
 <div>
     <div class="quiz-container">
         
@@ -96,7 +88,7 @@
             <div class="mode-buttons">
                 <!-- back btn -->
             <div>
-              <button class="btn-back" onclick="window.location.href='Nav.html'">
+              <button class="btn-back" onclick="history.back()">
               <i class="fas fa-chevron-left"></i> Back
               </button>
             </div>
